Fixes #1902 Add support for webhook filters (#1921)